# noteAPI

./: Dockerfile  README.md  config.py  docker-compose.yml  env.example  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 0718e023bfaa_relatioj_users_notes.py  36918efa5775_added_note_tag_tables.py  41d9ada604e4_added_user_table.py  caa74cc2d7b1_added_telegram_user_table.py
src/: asgi.py  auth.py  tools.py
src/api_v1/: notes_routes.py  routes.py  schemas.py  users_routes.py
src/database/: base.py  models.py
src/telegram/: bot.py  states.py
src/telegram/handlers/: base.py  notes.py
src/telegram/keyboards/: base.py  notes.py
